# comp_grap

./: .clangd  .gitignore  3D_trajectory_replication.txt  Makefile  main.cpp  meson.build  spark_test.cpp  spline.cpp  test_frust.cpp
SparkGUI/: box.cpp  box.hpp  button.cpp  button.hpp  label.cpp  label.hpp  meson.build  orientable.hpp  rect.cpp  rect.hpp  side_pane.cpp  side_pane.hpp  silder.cpp  slider.cpp  slider.hpp  spark pasta  spark.hpp  spark_core.cpp  spark_core.hpp  spark_gui.hpp  stb_easy_font.h  text.cpp  text.hpp  widget.cpp  widget.hpp
